--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="img/png" />
 
     <script src="assets//js/TypingTextEffect.js" defer></script>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -185,7 +192,7 @@
                         <p>Personaliza la cobertura médica básica para todos <br>tus colaboradores con flexza
 
                         </p>
-                   
+
                         <div class="hero-btns d-flex align-items-center">
 
                             <a href="#oportuna" class="template-btn template-btn primary-bg-3 m-t-40">
@@ -290,12 +297,12 @@
     </section>
 
     <!-- COMO FUNCIONA FLEXA EFICIENTE -->
-    <section id="eficiente" style="background-color: #F5F1F6;" class="service-with-counter">
+    <section id="eficiente" class="service-section bg-soft-grey-color">
         <div class="service-section bg-soft-grey-color">
             <div class="container-fluid fluid-gap-70  m-t-100 m-b-60 ">
 
                 <div class="row justify-content-center">
-                    <div class="col-lg-5">
+                    <div class="col-lg-12">
                         <div class="common-heading  title-line m-b-80 text-center">
                             <span class="tagline">Eficiente</span>
                             <h2 class="title">Flexza: fácil, sencillo y rápido</h2>
@@ -303,49 +310,53 @@
                     </div>
                 </div>
 
-                <div class="row image-boxes-v1" id="serviceSliderActive">
+                <div class="row image-boxes-v1 image-thumbnail-boxed slick-initialized slick-slider">
 
-                    <div class="col-3">
-                        <div class="image-box">
-                            <div class="thumb">
-                                <img src="assets/img/icono1.png" alt="Image">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="image-box2">
+                                <div class="thumb">
+                                    <img src="assets/img/icono1.png" alt="Image">
+                                </div>
+                                <h6>Si el usuario <br> se siente mal</h6>
+                                <a class="box-link"><i class="fa-solid fa-chevron-right"></i></a>
                             </div>
-                            <h6>Si el usuario <br> se siente mal</h6>
-                            <a class="box-link"><i class="fa-solid fa-chevron-right"></i></a>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="image-box2">
+                                <div class="thumb">
+                                    <img src="assets/img/icono2.png" alt="Image">
+                                </div>
+                                <h6>Paga sus gastos médicos menores con su tarjeta flexza</h6>
+                                <a class="box-link"><i class="fa-solid fa-chevron-right"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="image-box2">
+                                <div class="thumb">
+                                    <img src="assets/img/icono3.png" alt="Image">
+                                </div>
+                                <h6>Sube su ticket para <br> comprobar gastos</h6>
+                                <a class="box-link"><i class="fa-solid fa-chevron-right"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 last-hover"> <!-- Agregamos la clase "last-hover" al último elemento -->
+                            <div class="image-box1">
+                                <div class="thumb">
+                                    <img src="assets/img/icono4.png" alt="Image">
+                                </div>
+                                <h6>¡Y listo! <br> Así de sencillo. Sin trámites de facturación y reembolsos tediosos.
+                                </h6>
+
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-3">
-                        <div class="image-box">
-                            <div class="thumb">
-                                <img src="assets/img/icono2.png" alt="Image">
-                            </div>
-                            <h6>Paga sus gastos médicos menores con su tarjeta flexza</h6>
-                            <a class="box-link"><i class="fa-solid fa-chevron-right"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="image-box">
-                            <div class="thumb">
-                                <img src="assets/img/icono3.png" alt="Image">
-                            </div>
-                            <h6>Sube su ticket para <br> comprobar gastos</h6>
-                            <a class="box-link"><i class="fa-solid fa-chevron-right"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-3 last-hover"> <!-- Agregamos la clase "last-hover" al último elemento -->
-                        <div class="image-box1">
-                            <div class="thumb">
-                                <img src="assets/img/icono4.png" alt="Image">
-                            </div>
-                            <h6>¡Y listo! <br> Así de sencillo. Sin trámites de facturación y reembolsos tediosos.</h6>
-                        </div>
-                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
 
@@ -364,10 +375,10 @@
 
                         </div>
                         <p>
-                            Flexza te brinda la libertad de diseñar beneficios flexibles para CADA UNO de tus
-                            colaboradores. Tan versátil como lo imagines, y tan personalizado como ellos lo requieran.
-                            Define los beneficios según su puesto, temporalidad o monto. ¡La decisión está en tus
-                            manos!"
+                            En flexza, liberamos tu plan de salud de las complicaciones
+                            de los seguros convencionales. Nuestra solución simplifica
+                            la gestión, eliminando preocupaciones por siniestralidades.
+                            Tú eres quien decide el monto y la duración a tu medida."
                         </p>
 
 
@@ -687,7 +698,7 @@
 
 
     <!-- Nesteros expertor-->
-    <section id="contacto" style="background-color: #F5F1F6;" class="blog-area p-t-130 p-b-130">
+    <section id="contacto" style="background-color: #F5F1F6;" class="blog-area p-t-130 p-b-130 ">
         <div class="container">
             <div class="row justify-content-lg-start justify-content-center">
 
@@ -705,7 +716,7 @@
                 <div class="col-lg-6 offset-xl-1 col-md-10">
                     <div class="contact-form-area m-t-md-100">
 
-                        <div class="contact-form-v3">
+                        <div class="contact-form-v3 m-b-100">
                             <form action="assets/php/form-process.php" name="contactForm" id="contactForm"
                                 method="post">
                                 <div class="row">
@@ -815,18 +826,101 @@
     </section>
 
 
-    <footer style="background-color: #F5F1F6;" class="template-footer">
+    <footer style="background-color: var(--color-primary-3); color: #F5F1F6;" class="template-footer">
         <div class="container">
-            <div class="footer-copyright border-top-primary">
+
+            <div  class="container">
+                <div class="footer-widgets p-t-80 p-b-30 ">
+                    <div class="row">
+                        <!-- Single Footer Widget -->
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <div class="widget text-block-widget">
+                                <h5 style="color: white;" class="widget-title">Sobre Flexza</h5>
+                                <p style="color: white;" >Sed ut perspiciatis undmnis iste natus error sit voluptatem accusantium dolore
+                                    udantiuy totam rem aperiam.</p>
+
+                                <ul style="color: white;"  class="social-links m-t-20">
+                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Single Footer Widget -->
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <div class="d-lg-flex justify-content-center">
+                                <div class="widget nav-widget">
+                                    <h5 style="color: white;"  class="widget-title">Menu</h5>
+                                    <ul >
+                                        <li >
+                                            <a style="color: white;"  href="#oportuna">Oportuna</a>
+
+                                        </li>
+
+                                        <li>
+                                            <a style="color: white;"  href="#eficiente">Eficiente</a>
+
+                                        </li>
+                                        <li>
+                                            <a style="color: white;" href="#flexible">Flexible</a>
+
+                                        </li>
+                                        <li>
+                                            <a style="color: white;"  href="#optima">Óptima</a>
+
+                                        </li>
+                                        <li>
+                                            <a style="color: white;" href="#facil">Fácil</a>
+
+                                        </li>
+                                        <!-- <li>
+                                            <a style="color: #AB7EDD" href="#">Blog</a>
+            
+                                        </li> -->
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Single Footer Widget -->
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <div class="widget contact-widget pl-xl-4">
+                                <h5 style="color: white;"  class="widget-title">Contacto </h5>
+                                <ul>
+                                    <li>
+                                        <a style="color: white;" href="#">
+                                            <i style="color: white;"  class="fa fa-map-marker-alt"></i>
+                                           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a style="color: white;" href="mailto:hola@flexza.com">
+                                            <i style="color: white;"  class="fa fa-envelope-open-text"></i>
+                                            hola@flexza.com
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a style="color: white;"  href="tel:+">
+                                            <i style="color: white;" class="fa fa-phone"></i>
+                                            +000 (00) 000-00
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div  class="footer-copyright border-top-primary">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-sm-auto col-12">
                         <div class="copyright-logo text-center text-sm-left">
-                            <img src="assets/img/logo-1.png" alt="Landio">
+                            <img src="assets/img/logo-2.png" alt="Landio">
                         </div>
                     </div>
                     <div class="col-sm-auto col-12">
-                        <p class="copyright-text text-center text-sm-right pt-4 pt-sm-0" id="year">
-                            © <span id="current-year"></span> <a href="#">Flexza</a>. Todos los derechos reservados
+                        <p style="color: white;"  class="copyright-text text-center text-sm-right pt-4 pt-sm-0" id="year">
+                            © <span id="current-year"></span> <a style="color: white;"  href="#">Flexza</a>. Todos los derechos reservados
                         </p>
                     </div>
                 </div>
